fixing fetchDataButton Bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <option value="" selected disabled>Select a city</option>
         </select>
         
-        <button class="fetchDataButton" onclick="fetchDataButtonHandler()">NEXT</button>
+        <!-- <button class="fetchDataButton" onclick="fetchDataButtonHandler()">NEXT</button> -->
+        <button id="fetchDataButton">NEXT</button>
         <button id="unitSelectorButton" data-unit="K">K</button>
 
     </div>
